# rules_nixpkgs

./: README.md
core/: WORKSPACE
core/docs/: stardoc.bzl
nixpkgs/: nixpkgs.bzl
nixpkgs/private/: constraints.bzl
toolchains/cc/: BUILD.bazel
