load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_nixpkgs_core//docs:stardoc.bzl", "generate")

package(default_visibility = ["//visibility:public"])

exports_files([
    "cc.bzl",
    "foreign_cc.bzl",
    "cc.nix",
])

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

# boilerplate for `bazel_tools`
bzl_library(
    name = "bazel_tools",
    srcs = ["@bazel_tools//tools:bzl_srcs"],
)

bzl_library(
    name = "cc",
    srcs = [":srcs"],
    visibility = ["//visibility:public"],
    deps = [
        ":bazel_tools",
        "@bazel_skylib//lib:new_sets",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:sets",
        "@bazel_skylib//lib:versions",
        "@rules_nixpkgs_core//:nixpkgs",
    ],
)

generate(
    name = "README.md",
    input = "//:cc.bzl",
    symbol_names = [
        "nixpkgs_cc_configure",
    ],
    deps = ["//:cc"],
)
